force-app/main/default/objects/Opportunity/fields/HNBF_Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>HNBF_Sales_Type__c</fullName>
    <label>Opportunity SubType</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OpportunityType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Aflac</fullName>
            </value>
            <value>
                <fullName>AOR</fullName>
            </value>
            <value>
                <fullName>AOR with Renewal</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Commuter Benefits</fullName>
            </value>
            <value>
                <fullName>Cyber Liability</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Directors and Officers</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Employment Practice Liability (EPLI)</fullName>
            </value>
            <value>
                <fullName>Errors and Omissions</fullName>
            </value>
            <value>
                <fullName>Fiduciary Liability</fullName>
            </value>
            <value>
                <fullName>FSA</fullName>
            </value>
            <value>
                <fullName>FSA/PBA</fullName>
            </value>
            <value>
                <fullName>HRA</fullName>
            </value>
            <value>
                <fullName>HSA</fullName>
            </value>
            <value>
                <fullName>Incentive Split</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Misc Bond (This includes ID Fraud, Travelers MISC Bond(CRIME BOND))</fullName>
            </value>
            <value>
                <fullName>MS – Full Revenue 100%</fullName>
                <label>MS Full Revenue 100%</label>
            </value>
            <value>
                <fullName>MS Referral Split 70/30</fullName>
            </value>
            <value>
                <fullName>MS Team + Referral 35/35/30</fullName>
            </value>
            <value>
                <fullName>MS – Team Split 50/50</fullName>
                <label>MS Team Split 50/50</label>
            </value>
            <value>
                <fullName>Multiple Lines</fullName>
            </value>
            <value>
                <fullName>New Case</fullName>
            </value>
            <value>
                <fullName>New Group</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Oasis Internal Referral Split</fullName>
            </value>
            <value>
                <fullName>Oasis SOAR Split</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>