force-app/main/default/objects/Opportunity/fields/How_was_the_Advisor_Selected__c.field-meta.xml
<CustomField>
    <fullName>How_was_the_Advisor_Selected__c</fullName>
    <description>case #27424648 filled in by rep, must be populated before Opty is marked Actively Engaged in Sales Process</description>
    <label>How was the Advisor Selected?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FA Referred to Paychex</fullName>
            </value>
            <value>
                <fullName>Paychex Referred to FA</fullName>
            </value>
            <value>
                <fullName>Client Selected Advisor</fullName>
            </value>
            <value>
                <fullName>No FA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>