force-app/main/default/objects/Opportunity/fields/HR_Solutions_ASO__c.field-meta.xml
<CustomField>
    <fullName>HR_Solutions_ASO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HR Solutions - ASO</label>
    <type>Checkbox</type>
</CustomField>