force-app/main/default/objects/Opportunity/fields/IEUP_Date__c.field-meta.xml
<CustomField>
    <fullName>IEUP_Date__c</fullName>
    <description>First Initial Presentation Date set for this Opportunity. If the event date changes (or the event is deleted), this date does not change.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IEUP Date</label>
    <type>Date</type>
</CustomField>