force-app/main/default/objects/Opportunity/fields/Internal_Referral__c.field-meta.xml
<CustomField>
    <fullName>Internal_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To capture Internal Referral Info--who referred to you or who you referred to, depending on the record type</description>
    <inlineHelpText>To capture Internal Referral Info.</inlineHelpText>
    <label>Internal Referral</label>
    <referenceTo>Referral_Contact__c</referenceTo>
    <relationshipLabel>Opportunities (Internal Referral)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>