force-app/main/default/objects/Opportunity/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <description>case #22304998 - keyword information from webform</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Keywords</label>
    <type>TextArea</type>
</CustomField>