force-app/main/default/objects/Opportunity/fields/Last_Sms_Engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sms_Engagement_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Sms Engagement Date</label>
    <type>DateTime</type>
</CustomField>