force-app/main/default/objects/Opportunity/fields/LeadSource_Detail__c.field-meta.xml
<CustomField>
    <fullName>LeadSource_Detail__c</fullName>
    <description>free form text field to store LeadSource details, fed from NSS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LeadSource Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>