force-app/main/default/objects/Opportunity/fields/LeadSourceCategory__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceCategory__c</fullName>
    <inlineHelpText>What category does the main lead source of  this record fall into?</inlineHelpText>
    <label>Lead Source Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPA Referral</fullName>
            </value>
            <value>
                <fullName>Client Referral</fullName>
            </value>
            <value>
                <fullName>Internal Referral</fullName>
            </value>
            <value>
                <fullName>Third Party Referral</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Paychex Transfer/change Client</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Bank Referral</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>Financial Advisor Referral</fullName>
            </value>
            <value>
                <fullName>H&amp;B Referral</fullName>
            </value>
            <value>
                <fullName>HR Services Referral</fullName>
            </value>
            <value>
                <fullName>HRG Referral</fullName>
            </value>
            <value>
                <fullName>Insurance Agent Referral</fullName>
            </value>
            <value>
                <fullName>MMS Referral</fullName>
            </value>
            <value>
                <fullName>MMS CSSR Referral</fullName>
            </value>
            <value>
                <fullName>NSS Outbound</fullName>
            </value>
            <value>
                <fullName>PEO Referral</fullName>
            </value>
            <value>
                <fullName>Retirement Referral</fullName>
            </value>
            <value>
                <fullName>Self Generated</fullName>
            </value>
            <value>
                <fullName>SMB Referral</fullName>
            </value>
            <value>
                <fullName>SOAR</fullName>
            </value>
            <value>
                <fullName>Strategic Accounts</fullName>
            </value>
            <value>
                <fullName>SurePayroll</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>