force-app/main/default/objects/Opportunity/fields/Life_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Life_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Life Insurance</label>
    <type>Checkbox</type>
</CustomField>