force-app/main/default/objects/Opportunity/fields/Local_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Local_Competitors__c</fullName>
    <description>Name of local competitor</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Local Competitors</label>
    <length>100</length>
    <type>Text</type>
</CustomField>