force-app/main/default/objects/Opportunity/fields/Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Lost_Date__c</fullName>
    <description>Entered by Corporate Commissions to calculate payment to bank on referrals</description>
    <formula>Account.Lost_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lost Date</label>
    <type>Date</type>
</CustomField>