force-app/main/default/objects/Opportunity/fields/LTD__c.field-meta.xml
<CustomField>
    <fullName>LTD__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Long-Term Disability</inlineHelpText>
    <label>LTD</label>
    <type>Checkbox</type>
</CustomField>