force-app/main/default/objects/Opportunity/fields/LTD_Carrier__c.field-meta.xml
<CustomField>
    <fullName>LTD_Carrier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LTD Carrier</label>
    <length>25</length>
    <type>Text</type>
</CustomField>