force-app/main/default/objects/Opportunity/fields/Mandate_Sale__c.field-meta.xml
<CustomField>
    <fullName>Mandate_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandate Sale</label>
    <type>Checkbox</type>
</CustomField>