force-app/main/default/objects/Opportunity/fields/Month_Sale_Reported__c.field-meta.xml
<CustomField>
    <fullName>Month_Sale_Reported__c</fullName>
    <description>Entered by Corporate Commissions, bank will be paid the month following this date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Month Sale Reported</label>
    <type>Date</type>
</CustomField>