force-app/main/default/objects/Opportunity/fields/Mthd_Lead_Rcvd__c.field-meta.xml
<CustomField>
    <fullName>Mthd_Lead_Rcvd__c</fullName>
    <description>Used for NSS feed to specifically identify method client used to refer the prospect for the Five For Free program</description>
    <label>Mthd Lead Rcvd</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Rep Effort</fullName>
                <default>true</default>
                <label>Sales Rep Effort</label>
            </value>
            <value>
                <fullName>On The Spot Explore Paychex Referral</fullName>
            </value>
            <value>
                <fullName>CPA Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>