force-app/main/default/objects/Opportunity/fields/Multi_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Multi_Frequency__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select checkbox if client has multiple frequencies</inlineHelpText>
    <label>Multi Frequency</label>
    <type>Checkbox</type>
</CustomField>