force-app/main/default/objects/Opportunity/fields/Multi_ID_Client__c.field-meta.xml
<CustomField>
    <fullName>Multi_ID_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate this client has multiple IDs and is used for additional discounting</description>
    <inlineHelpText>Check this box to indicate this client has multiple IDs and is eligible for additional discounting</inlineHelpText>
    <label>Multi-ID Client</label>
    <type>Checkbox</type>
</CustomField>