force-app/main/default/objects/Opportunity/fields/NSR_Description__c.field-meta.xml
<CustomField>
    <fullName>NSR_Description__c</fullName>
    <description>event trigger populates value when activitydate changes. Used in NSR status back workflow</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NSR Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>