force-app/main/default/objects/Opportunity/fields/NSR_Email__c.field-meta.xml
<CustomField>
    <fullName>NSR_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NSR Email</label>
    <type>Email</type>
</CustomField>