force-app/main/default/objects/Opportunity/fields/NSS_Prospect_ID__c.field-meta.xml
<CustomField>
    <fullName>NSS_Prospect_ID__c</fullName>
    <description>Cross reference number for NSS system</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>NSS Prospect ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>