force-app/main/default/objects/Opportunity/fields/NSS_Rep__c.field-meta.xml
<CustomField>
    <fullName>NSS_Rep__c</fullName>
    <description>Name of the National Sales Rep associated with this opportunity</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NSS Rep</label>
    <length>50</length>
    <type>Text</type>
</CustomField>