force-app/main/default/objects/Opportunity/fields/NSS_Source__c.field-meta.xml
<CustomField>
    <fullName>NSS_Source__c</fullName>
    <description>Use to tell the FSR if the Opportunity was created by NSR. Inbound NSR leads are considered to be the hottest.</description>
    <inlineHelpText>Use to tell the FSR if the Opportunity was created by NSR. Inbound NSR leads are considered to be the hottest. The value of this field is set by the custom conversion process and cannot be modified by users.</inlineHelpText>
    <label>NSS Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Inbound-BeneTrac</fullName>
            </value>
            <value>
                <fullName>Inbound-Flock</fullName>
            </value>
            <value>
                <fullName>Inbound-Oasis</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Outbound-Oasis</fullName>
            </value>
            <value>
                <fullName>Telereach</fullName>
            </value>
            <value>
                <fullName>INB-SOAR</fullName>
            </value>
            <value>
                <fullName>SurePayroll-Ecomm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>