force-app/main/default/objects/Opportunity/fields/Num_of_ACH_check_transactions_per_month__c.field-meta.xml
<CustomField>
    <fullName>Num_of_ACH_check_transactions_per_month__c</fullName>
    <label># of ACH/check transactions per month</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>