force-app/main/default/objects/Opportunity/fields/Number_of_Events__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Events__c</fullName>
    <description>case #25570722 number of events linked to this opty.  Set by EventCheckType trigger</description>
    <label>Number of Events</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>