force-app/main/default/objects/Opportunity/fields/Oasis_Demo_Reason__c.field-meta.xml
<CustomField>
    <fullName>Oasis_Demo_Reason__c</fullName>
    <label>PEO Platform Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Benefits: Ancillaries</fullName>
            </value>
            <value>
                <fullName>Benefits: Master Medical Plans</fullName>
            </value>
            <value>
                <fullName>Benefits: Master Medical Renewal Period</fullName>
            </value>
            <value>
                <fullName>Benefits: Workers Comp</fullName>
            </value>
            <value>
                <fullName>Compensation: 87/100</fullName>
            </value>
            <value>
                <fullName>Deal Strategy: GAP insurance</fullName>
            </value>
            <value>
                <fullName>Deal Strategy: Multi Entity Requirements</fullName>
            </value>
            <value>
                <fullName>Deal Strategy: SUI pricing</fullName>
            </value>
            <value>
                <fullName>Operational: Implementation</fullName>
            </value>
            <value>
                <fullName>Operational: Service Level</fullName>
            </value>
            <value>
                <fullName>Other: Other</fullName>
            </value>
            <value>
                <fullName>Personal: Comfort Level</fullName>
            </value>
            <value>
                <fullName>Personal: Leadership Direction</fullName>
            </value>
            <value>
                <fullName>Prospect: Past Experience</fullName>
            </value>
            <value>
                <fullName>Referral: Broker</fullName>
            </value>
            <value>
                <fullName>Referral: Current Client</fullName>
            </value>
            <value>
                <fullName>Technology: API/Integration</fullName>
            </value>
            <value>
                <fullName>Technology: ATS Need</fullName>
            </value>
            <value>
                <fullName>Technology: Mobile</fullName>
            </value>
            <value>
                <fullName>Technology: Reporting</fullName>
            </value>
            <value>
                <fullName>Technology: SEP 401k Integration Flex</fullName>
            </value>
            <value>
                <fullName>Technology: UI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>