force-app/main/default/objects/Opportunity/fields/Office_Price_Schedule_Map__c.field-meta.xml
<CustomField>
    <fullName>Office_Price_Schedule_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The pricing schedule information used to calculate for this Opportunity.</description>
    <inlineHelpText>The pricing schedule information used to calculate for this Opportunity.</inlineHelpText>
    <label>Office Price Schedule Map</label>
    <referenceTo>Office_Price_Schedule_Map__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>