force-app/main/default/objects/Opportunity/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <description>The Id of the current Opportunity, or if this is a cloned record, the Id of the Opportunity this is cloned from.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Id of the current Opportunity, or if this is a cloned record, the Id of the Opportunity this is cloned from.</inlineHelpText>
    <label>Opportunity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>