force-app/main/default/objects/Opportunity/fields/OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>OpportunityType__c</fullName>
    <description>Used to determine whether or not an Opportunity is a duplicate. After resorting picklist order, always move the following values to the end of the list: Adjustment; True-Up; Chargeback; Balance.</description>
    <inlineHelpText>Is this a payroll or an HRS opportunity?</inlineHelpText>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Add-On ID</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Ancillary</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
                <label>HR Pro</label>
            </value>
            <value>
                <fullName>AUTO</fullName>
            </value>
            <value>
                <fullName>Balance</fullName>
            </value>
            <value>
                <fullName>BeneTrac Gold</fullName>
            </value>
            <value>
                <fullName>BeneTrac Platinum</fullName>
            </value>
            <value>
                <fullName>BND (ERISA BOND)</fullName>
            </value>
            <value>
                <fullName>BOP (Business Owners Package)</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Cyber A Basic $250</fullName>
            </value>
            <value>
                <fullName>Cyber A Basic $300</fullName>
            </value>
            <value>
                <fullName>Cyber Enhanced 1 $1,725</fullName>
            </value>
            <value>
                <fullName>Cyber Enhanced 1 $750</fullName>
            </value>
            <value>
                <fullName>Cyber Enhanced 2 $1,200</fullName>
            </value>
            <value>
                <fullName>Cyber Enhanced 2 $1,940.63</fullName>
            </value>
            <value>
                <fullName>Cyber Enhanced 3 $1,500</fullName>
            </value>
            <value>
                <fullName>Cyber Enhanced 3 $3,151.58</fullName>
            </value>
            <value>
                <fullName>Cyber Enhanced 4 $2,650</fullName>
            </value>
            <value>
                <fullName>Cyber Enhanced 4 $5,304.38</fullName>
            </value>
            <value>
                <fullName>Digital Marketing</fullName>
            </value>
            <value>
                <fullName>Directors and Officers</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Employment Practice Liability (EPLI)</fullName>
            </value>
            <value>
                <fullName>ERISA</fullName>
            </value>
            <value>
                <fullName>Errors and Omissions</fullName>
            </value>
            <value>
                <fullName>ERTC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>