force-app/main/default/objects/Opportunity/fields/OppSource__c.field-meta.xml
<CustomField>
    <fullName>OppSource__c</fullName>
    <description>Used to define the source of this Opportunity - how it was created. Populated by the code and typically not visible to the user.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Opp Source</label>
    <length>30</length>
    <type>Text</type>
</CustomField>