force-app/main/default/objects/Opportunity/fields/Other_Competition__c.field-meta.xml
<CustomField>
    <fullName>Other_Competition__c</fullName>
    <description>Secondary Competitor</description>
    <label>Other Competition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Competitor</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>ADP Payforce</fullName>
            </value>
            <value>
                <fullName>ADP PC/Payroll for Windows</fullName>
            </value>
            <value>
                <fullName>ADP Run</fullName>
            </value>
            <value>
                <fullName>ADP Total Source</fullName>
            </value>
            <value>
                <fullName>ADP Workforce Now</fullName>
            </value>
            <value>
                <fullName>Advantage Payroll</fullName>
            </value>
            <value>
                <fullName>Alpha Staff</fullName>
            </value>
            <value>
                <fullName>Asure Software</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Ceridian</fullName>
            </value>
            <value>
                <fullName>Compupay</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>Current Broker</fullName>
            </value>
            <value>
                <fullName>Evolution Licensee</fullName>
            </value>
            <value>
                <fullName>Financial Advisor</fullName>
            </value>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>Insperity</fullName>
            </value>
            <value>
                <fullName>Intuit - Online Payroll (PayCycle)</fullName>
            </value>
            <value>
                <fullName>Intuit - Quickbooks</fullName>
            </value>
            <value>
                <fullName>Local Competitor</fullName>
            </value>
            <value>
                <fullName>Manually</fullName>
            </value>
            <value>
                <fullName>Millennium Licensee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Ovation</fullName>
            </value>
            <value>
                <fullName>Paychoice</fullName>
            </value>
            <value>
                <fullName>Paycom</fullName>
            </value>
            <value>
                <fullName>Paycor</fullName>
            </value>
            <value>
                <fullName>Paylocity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>