force-app/main/default/objects/Opportunity/fields/Other_Credit__c.field-meta.xml
<CustomField>
    <fullName>Other_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are there any other additional reasons for credit?</inlineHelpText>
    <label>Other Credit</label>
    <type>Checkbox</type>
</CustomField>