force-app/main/default/objects/Opportunity/fields/Other_Credit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Credit_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Reason is required for Credit</inlineHelpText>
    <label>Other Credit Reason</label>
    <type>TextArea</type>
</CustomField>