force-app/main/default/objects/Opportunity/fields/OwnerContact__c.field-meta.xml
<CustomField>
    <fullName>OwnerContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Contact record for the Owner of the Opportunity</inlineHelpText>
    <label>Owner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Owner Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>