force-app/main/default/objects/Opportunity/fields/PACO_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>PACO_Submission_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PACO Submission Date</label>
    <type>DateTime</type>
</CustomField>