force-app/main/default/objects/Opportunity/fields/Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points__c</fullName>
    <inlineHelpText>What are the business pain points? Select all that apply.</inlineHelpText>
    <label>Shopping Triggers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>Benefits Administration</fullName>
            </value>
            <value>
                <fullName>Company began offering new benefits/trainings</fullName>
            </value>
            <value>
                <fullName>Company founded or hired its first employees</fullName>
            </value>
            <value>
                <fullName>Company grew out of current solution</fullName>
            </value>
            <value>
                <fullName>Compliance/Regulations</fullName>
            </value>
            <value>
                <fullName>Existing solution does not integrate with other business solutions used</fullName>
            </value>
            <value>
                <fullName>Generating More Revenue</fullName>
            </value>
            <value>
                <fullName>Health Insurance Management</fullName>
            </value>
            <value>
                <fullName>Hiring &amp; Onboarding</fullName>
            </value>
            <value>
                <fullName>HRIS</fullName>
            </value>
            <value>
                <fullName>New accountant required or recommended it</fullName>
            </value>
            <value>
                <fullName>Non-HR vendor offered HR solution as well</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payroll Administration</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>Periodic review of the solutions purchased</fullName>
            </value>
            <value>
                <fullName>Previous solution billed improperly</fullName>
            </value>
            <value>
                <fullName>Previous solution had poor customer service</fullName>
            </value>
            <value>
                <fullName>Previous solution increased in price</fullName>
            </value>
            <value>
                <fullName>Previous solution produced too many errors</fullName>
            </value>
            <value>
                <fullName>Recruiting &amp; Applicant Tracking</fullName>
            </value>
            <value>
                <fullName>Regulation change</fullName>
            </value>
            <value>
                <fullName>Retirement/Separation Services</fullName>
            </value>
            <value>
                <fullName>Time &amp; Attendance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>